# ev3kit

./: .gitmodules  CMakeLists.txt
cmake/: toolchain-arm-linux-gnueabi.cmake
ev3kit/: CMakeLists.txt  device.cpp  device.hpp  main.cpp  property_base.cpp  property_base.hpp  property_readable.hpp
test/: CMakeLists.txt  device.cpp
